[package]
name = "monz0"
version = "0.1.0"
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
monzo-lib = { path = "../monzo-lib" }
serde = { version = "1.0.103", features = ["derive"] }
confy = "0.3.1"
prettytable-rs = "0.8.0"
tokio = "0.2.0-alpha.6"
